--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
     </div>
     <div class="col-lg-4">
       <form>
-        <div class="form-group mr-2">
+        <div class="form-group mr-2 ml-2">
           <label>Enter a TV show</label>
-          <input type="text" class="form-control">
+          <input id="text" type="text" class="form-control">
         </div>
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button id="submit" type="submit" class="btn btn-primary ml-2">Submit</button>
       </form>
     </div>
   </div>
