--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>GifTastic</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" href="assets/css/reset.css" />
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.2/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Smlep5jCw/wG7hdkwQ/Z5nLIefveQRIY9nfy6xoR1uRYBtpZgI6339F5dgvm/e9B"
     crossorigin="anonymous">
   <link rel="stylesheet" type="text/css" media="screen" href="assets/css/style.css" />
@@ -15,31 +16,42 @@
 
 <body>
 
+  <div class="container">
 
-  <div class="row">
-    <div class="col-lg-12">
-      <div class="buttons">
-      </div>
+    <div class="jumbotron bg-primary">
+      <h1 class="display-4">Emmy Gif Selector</h1>
     </div>
-  </div>
 
-  <div class="row">
-    <div class="col-lg-8">
-      <div id="gifs-appear-here">
-      </div>
-    </div>
-    <div class="col-lg-4">
-      <form>
-        <div class="form-group mr-2 ml-2">
-          <label>Enter a TV show</label>
-          <input id="text" type="text" class="form-control">
+    <div class="row">
+      <div class="col-lg-12">
+        <div class="buttons">
         </div>
-        <button id="submit" type="submit" class="btn btn-primary ml-2">Submit</button>
-      </form>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <form>
+          <div class="form-group mr-2 ml-2">
+            <label>Enter a TV show</label>
+            <input id="text" type="text" class="form-control">
+          </div>
+          <button id="submit" type="submit" class="btn btn-primary ml-2">Submit</button>
+        </form>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-lg-12">
+        <div id="gifs-appear-here">
+        </div>
+      </div>
     </div>
   </div>
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="javascript/main.js"></script>
+  <script src="assets/javascript/main.js"></script>
+
 </body>
 
 </html>
